<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/space_4">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/appliance_name"
        app:boxStrokeColor="@color/accent"
        app:hintTextColor="@color/accent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_muted" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_3"
        android:hint="@string/appliance_type"
        app:boxStrokeColor="@color/accent"
        app:hintTextColor="@color/accent">

        <AutoCompleteTextView
            android:id="@+id/editType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_muted" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_3"
        android:hint="@string/appliance_power"
        app:boxStrokeColor="@color/accent"
        app:hintTextColor="@color/accent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_muted" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_3"
        android:hint="@string/appliance_cycle_kwh"
        app:boxStrokeColor="@color/accent"
        app:hintTextColor="@color/accent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editCycleKwh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_muted" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_3"
        android:hint="@string/appliance_cycle_min"
        app:boxStrokeColor="@color/accent"
        app:hintTextColor="@color/accent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editCycleMinutes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_muted" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchActive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_3"
        android:checked="true"
        android:text="@string/appliance_active"
        android:textColor="@color/text_primary" />
</LinearLayout>